<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/screen_color">

    <TextView
        android:id="@+id/mood_filter_reason_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Reason Contains"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_filter_disgusted_checkbox" />

    <EditText
        android:id="@+id/mood_filter_reason_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:padding="8dp"
        android:hint="Enter Space Seperated Words"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_filter_reason_label" />

    <TextView
        android:id="@+id/mood_filter_emotion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Emotional State"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_filter_location_recency_checkbox" />

    <CheckBox
        android:id="@+id/mood_filter_location_recency_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Current Week Only"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/mood_filter_happy_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Happy"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_filter_emotion_label" />

    <CheckBox
        android:id="@+id/mood_filter_sad_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Sad"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_filter_happy_checkbox" />

    <CheckBox
        android:id="@+id/mood_filter_angry_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Angry"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/mood_filter_happy_checkbox"
        app:layout_constraintTop_toTopOf="@+id/mood_filter_happy_checkbox" />

    <CheckBox
        android:id="@+id/mood_filter_scared_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scared"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/mood_filter_sad_checkbox"
        app:layout_constraintTop_toTopOf="@+id/mood_filter_sad_checkbox" />

    <CheckBox
        android:id="@+id/mood_filter_surprised_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Surprised"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/mood_filter_confused_checkbox"
        app:layout_constraintTop_toTopOf="@+id/mood_filter_confused_checkbox" />

    <CheckBox
        android:id="@+id/mood_filter_disgusted_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Disgusted"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/mood_filter_scared_checkbox"
        app:layout_constraintTop_toTopOf="@+id/mood_filter_scared_checkbox" />

    <CheckBox
        android:id="@+id/mood_filter_confused_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confused"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/mood_filter_angry_checkbox"
        app:layout_constraintTop_toTopOf="@+id/mood_filter_angry_checkbox" />

    <CheckBox
        android:id="@+id/mood_filter_ashamed_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ashamed"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/mood_filter_disgusted_checkbox"
        app:layout_constraintTop_toTopOf="@+id/mood_filter_disgusted_checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>