...
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:text="Get Location"
        android:textSize="16sp"
        app:iconPadding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/alter_mood_cancel_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alter_mood_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
